compiler/parser/GramaticaParser.java
// $ANTLR 3.4 compiler/parser/GramaticaParser.g 2013-09-09 20:10:06

	package compiler.parser;
	import compiler.scanner.*;
	import java.util.ArrayList;
	import org.antlr.runtime.*;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked"})
public class GramaticaParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ADD", "ADD1", "AND", "ANDBITWISE", "ASCII", "ASSIGN", "ASSIGNADD", "ASSIGNSUB", "BOOLEAN", "BREAK", "CALLOUT", "CHAR", "CHR", "CLASS", "COMA", "COMMENTS", "CONTINUE", "DIGIT", "DIV", "DPOINTS", "ELSE", "EQUAL", "ESC", "FALSE", "FOR", "GREATHAN", "GTOEQ", "HEX", "HEXCHAR", "IF", "INDENTIFIER", "INT", "LBRACE", "LBRAKET", "LESSTHAN", "LPAREN", "LTOEQ", "MINUS", "MINUS1", "MOD", "MULT", "NEGNUM", "NEQUAL", "NOT", "NOTCHAR1", "NOTCHAR2", "NOTCHAR3", "NOTCHAR4", "NOTCHAR5", "NOTCHAR6", "NOTHEX1", "NOTHEX2", "NOTINDEN", "NOTSTR1", "NOTSTR2", "NOTSTR3", "NUM", "OR", "ORBITWISE", "POINT", "QMARK", "RAISE", "RBRACE", "RBRAKET", "RETURN", "RPAREN", "SEMICO", "STR", "TRUE", "UCASE", "UNDERSCORE", "UNICODE1", "UNICODE2", "UNICODE3", "VOID", "WHITESPACE", "LBRAKE", "RBRAKE"
    };

    public static final int EOF=-1;
    public static final int ADD=4;
    public static final int ADD1=5;
    public static final int AND=6;
    public static final int ANDBITWISE=7;
    public static final int ASCII=8;
    public static final int ASSIGN=9;
    public static final int ASSIGNADD=10;
    public static final int ASSIGNSUB=11;
    public static final int BOOLEAN=12;
    public static final int BREAK=13;
    public static final int CALLOUT=14;
    public static final int CHAR=15;
    public static final int CHR=16;
    public static final int CLASS=17;
    public static final int COMA=18;
    public static final int COMMENTS=19;
    public static final int CONTINUE=20;
    public static final int DIGIT=21;
    public static final int DIV=22;
    public static final int DPOINTS=23;
    public static final int ELSE=24;
    public static final int EQUAL=25;
    public static final int ESC=26;
    public static final int FALSE=27;
    public static final int FOR=28;
    public static final int GREATHAN=29;
    public static final int GTOEQ=30;
    public static final int HEX=31;
    public static final int HEXCHAR=32;
    public static final int IF=33;
    public static final int INDENTIFIER=34;
    public static final int INT=35;
    public static final int LBRACE=36;
    public static final int LBRAKET=37;
    public static final int LESSTHAN=38;
    public static final int LPAREN=39;
    public static final int LTOEQ=40;
    public static final int MINUS=41;
    public static final int MINUS1=42;
    public static final int MOD=43;
    public static final int MULT=44;
    public static final int NEGNUM=45;
    public static final int NEQUAL=46;
    public static final int NOT=47;
    public static final int NOTCHAR1=48;
    public static final int NOTCHAR2=49;
    public static final int NOTCHAR3=50;
    public static final int NOTCHAR4=51;
    public static final int NOTCHAR5=52;
    public static final int NOTCHAR6=53;
    public static final int NOTHEX1=54;
    public static final int NOTHEX2=55;
    public static final int NOTINDEN=56;
    public static final int NOTSTR1=57;
    public static final int NOTSTR2=58;
    public static final int NOTSTR3=59;
    public static final int NUM=60;
    public static final int OR=61;
    public static final int ORBITWISE=62;
    public static final int POINT=63;
    public static final int QMARK=64;
    public static final int RAISE=65;
    public static final int RBRACE=66;
    public static final int RBRAKET=67;
    public static final int RETURN=68;
    public static final int RPAREN=69;
    public static final int SEMICO=70;
    public static final int STR=71;
    public static final int TRUE=72;
    public static final int UCASE=73;
    public static final int UNDERSCORE=74;
    public static final int UNICODE1=75;
    public static final int UNICODE2=76;
    public static final int UNICODE3=77;
    public static final int VOID=78;
    public static final int WHITESPACE=79;
    public static final int LBRAKE=80;
    public static final int RBRAKE=81;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public GramaticaParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public GramaticaParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

    public String[] getTokenNames() { return GramaticaParser.tokenNames; }
    public String getGrammarFileName() { return "compiler/parser/GramaticaParser.g"; }


    	public ArrayList<String> errors = new ArrayList<String>();
    	public ArrayList<String> rules = new ArrayList<String>();

    	public void displayRecognitionError(String[] tokenNames, RecognitionException e){
    		String hdr = getErrorHeader(e);
    		String msg = getErrorMessage(e, tokenNames);
    		int x = hdr.indexOf("line");
    		String line = hdr.substring(x);
    		errors.add(line+" "+msg);
    	}
    	public void addtoList(String str){
    		rules.add(str);
    	}
    	public ArrayList<String> getErrors(){
    		return errors;
    	}
    	public ArrayList<String> getRules(){
    		ArrayList<String> rulez = new ArrayList<String>(rules.size());
    		for (int i=rules.size()-1; i>=0; i--) {
    			rulez.add(rules.get(i));
    		}
    		return rulez;
    	}



    // $ANTLR start "start"
    // compiler/parser/GramaticaParser.g:41:1: start : CLASS INDENTIFIER LBRACE ( field_decl )* ( method_decl )* RBRACE ;
    public final void start() throws RecognitionException {
        try {
            // compiler/parser/GramaticaParser.g:41:10: ( CLASS INDENTIFIER LBRACE ( field_decl )* ( method_decl )* RBRACE )
            // compiler/parser/GramaticaParser.g:41:12: CLASS INDENTIFIER LBRACE ( field_decl )* ( method_decl )* RBRACE
            {
            match(input,CLASS,FOLLOW_CLASS_in_start41); 

            match(input,INDENTIFIER,FOLLOW_INDENTIFIER_in_start43); 

            match(input,LBRACE,FOLLOW_LBRACE_in_start45); 

            // compiler/parser/GramaticaParser.g:41:37: ( field_decl )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==INT) ) {
                    int LA1_1 = input.LA(2);

                    if ( (LA1_1==INDENTIFIER) ) {
                        int LA1_4 = input.LA(3);

                        if ( (LA1_4==COMA||LA1_4==SEMICO||LA1_4==LBRAKE) ) {
                            alt1=1;
                        }


                    }


                }
                else if ( (LA1_0==BOOLEAN) ) {
                    int LA1_2 = input.LA(2);

                    if ( (LA1_2==INDENTIFIER) ) {
                        int LA1_4 = input.LA(3);

                        if ( (LA1_4==COMA||LA1_4==SEMICO||LA1_4==LBRAKE) ) {
                            alt1=1;
                        }


                    }


                }


                switch (alt1) {
            	case 1 :
            	    // compiler/parser/GramaticaParser.g:41:37: field_decl
            	    {
            	    pushFollow(FOLLOW_field_decl_in_start47);
            	    field_decl();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            // compiler/parser/GramaticaParser.g:41:49: ( method_decl )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==BOOLEAN||LA2_0==INT||LA2_0==VOID) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // compiler/parser/GramaticaParser.g:41:49: method_decl
            	    {
            	    pushFollow(FOLLOW_method_decl_in_start50);
            	    method_decl();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            match(input,RBRACE,FOLLOW_RBRACE_in_start53); 

            addtoList("Start");

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "start"



    // $ANTLR start "field_decl"
    // compiler/parser/GramaticaParser.g:43:1: field_decl : type ( id | id LBRAKE int_literal RBRAKE ) ( COMA ( id | id LBRAKE int_literal RBRAKE ) )* SEMICO ;
    public final void field_decl() throws RecognitionException {
        try {
            // compiler/parser/GramaticaParser.g:43:13: ( type ( id | id LBRAKE int_literal RBRAKE ) ( COMA ( id | id LBRAKE int_literal RBRAKE ) )* SEMICO )
            // compiler/parser/GramaticaParser.g:43:15: type ( id | id LBRAKE int_literal RBRAKE ) ( COMA ( id | id LBRAKE int_literal RBRAKE ) )* SEMICO
            {
            pushFollow(FOLLOW_type_in_field_decl64);
            type();

            state._fsp--;


            // compiler/parser/GramaticaParser.g:43:20: ( id | id LBRAKE int_literal RBRAKE )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==INDENTIFIER) ) {
                int LA3_1 = input.LA(2);

                if ( (LA3_1==COMA||LA3_1==SEMICO) ) {
                    alt3=1;
                }
                else if ( (LA3_1==LBRAKE) ) {
                    alt3=2;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 3, 1, input);

                    throw nvae;

                }
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;

            }
            switch (alt3) {
                case 1 :
                    // compiler/parser/GramaticaParser.g:43:21: id
                    {
                    pushFollow(FOLLOW_id_in_field_decl67);
                    id();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // compiler/parser/GramaticaParser.g:43:26: id LBRAKE int_literal RBRAKE
                    {
                    pushFollow(FOLLOW_id_in_field_decl71);
                    id();

                    state._fsp--;


                    match(input,LBRAKE,FOLLOW_LBRAKE_in_field_decl73); 

                    pushFollow(FOLLOW_int_literal_in_field_decl75);
                    int_literal();

                    state._fsp--;


                    match(input,RBRAKE,FOLLOW_RBRAKE_in_field_decl77); 

                    }
                    break;

            }


            // compiler/parser/GramaticaParser.g:43:56: ( COMA ( id | id LBRAKE int_literal RBRAKE ) )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==COMA) ) {
                    alt5=1;
                }


                switch (alt5) {
            	case 1 :
            	    // compiler/parser/GramaticaParser.g:43:57: COMA ( id | id LBRAKE int_literal RBRAKE )
            	    {
            	    match(input,COMA,FOLLOW_COMA_in_field_decl81); 

            	    // compiler/parser/GramaticaParser.g:43:62: ( id | id LBRAKE int_literal RBRAKE )
            	    int alt4=2;
            	    int LA4_0 = input.LA(1);

            	    if ( (LA4_0==INDENTIFIER) ) {
            	        int LA4_1 = input.LA(2);

            	        if ( (LA4_1==COMA||LA4_1==SEMICO) ) {
            	            alt4=1;
            	        }
            	        else if ( (LA4_1==LBRAKE) ) {
            	            alt4=2;
            	        }
            	        else {
            	            NoViableAltException nvae =
            	                new NoViableAltException("", 4, 1, input);

            	            throw nvae;

            	        }
            	    }
            	    else {
            	        NoViableAltException nvae =
            	            new NoViableAltException("", 4, 0, input);

            	        throw nvae;

            	    }
            	    switch (alt4) {
            	        case 1 :
            	            // compiler/parser/GramaticaParser.g:43:63: id
            	            {
            	            pushFollow(FOLLOW_id_in_field_decl84);
            	            id();

            	            state._fsp--;


            	            }
            	            break;
            	        case 2 :
            	            // compiler/parser/GramaticaParser.g:43:68: id LBRAKE int_literal RBRAKE
            	            {
            	            pushFollow(FOLLOW_id_in_field_decl88);
            	            id();

            	            state._fsp--;


            	            match(input,LBRAKE,FOLLOW_LBRAKE_in_field_decl90); 

            	            pushFollow(FOLLOW_int_literal_in_field_decl92);
            	            int_literal();

            	            state._fsp--;


            	            match(input,RBRAKE,FOLLOW_RBRAKE_in_field_decl94); 

            	            }
            	            break;

            	    }


            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);


            match(input,SEMICO,FOLLOW_SEMICO_in_field_decl99); 

            addtoList("Field Declaration");

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "field_decl"



    // $ANTLR start "method_decl"
    // compiler/parser/GramaticaParser.g:45:1: method_decl : ( type | VOID ) id LPAREN ( ( type id ) ( COMA type id )* )? RPAREN block ;
    public final void method_decl() throws RecognitionException {
        try {
            // compiler/parser/GramaticaParser.g:45:14: ( ( type | VOID ) id LPAREN ( ( type id ) ( COMA type id )* )? RPAREN block )
            // compiler/parser/GramaticaParser.g:45:16: ( type | VOID ) id LPAREN ( ( type id ) ( COMA type id )* )? RPAREN block
            {
            // compiler/parser/GramaticaParser.g:45:16: ( type | VOID )
            int alt6=2;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==BOOLEAN||LA6_0==INT) ) {
                alt6=1;
            }
            else if ( (LA6_0==VOID) ) {
                alt6=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;

            }
            switch (alt6) {
                case 1 :
                    // compiler/parser/GramaticaParser.g:45:17: type
                    {
                    pushFollow(FOLLOW_type_in_method_decl110);
                    type();

                    state._fsp--;


                    }
                    break;
                case 2 :
                    // compiler/parser/GramaticaParser.g:45:24: VOID
                    {
                    match(input,VOID,FOLLOW_VOID_in_method_decl114); 

                    }
                    break;

            }


            pushFollow(FOLLOW_id_in_method_decl117);
            id();

            state._fsp--;


            match(input,LPAREN,FOLLOW_LPAREN_in_method_decl119); 

            // compiler/parser/GramaticaParser.g:45:40: ( ( type id ) ( COMA type id )* )?
            int alt8=2;
            int LA8_0 = input.LA(1);

            if ( (LA8_0==BOOLEAN||LA8_0==INT) ) {
                alt8=1;
            }
            switch (alt8) {
                case 1 :
                    // compiler/parser/GramaticaParser.g:45:41: ( type id ) ( COMA type id )*
                    {
                    // compiler/parser/GramaticaParser.g:45:41: ( type id )
                    // compiler/parser/GramaticaParser.g:45:42: type id
                    {
                    pushFollow(FOLLOW_type_in_method_decl123);
                    type();

                    state._fsp--;


                    pushFollow(FOLLOW_id_in_method_decl125);
                    id();

                    state._fsp--;


                    }


                    // compiler/parser/GramaticaParser.g:45:51: ( COMA type id )*
                    loop7:
                    do {
                        int alt7=2;
                        int LA7_0 = input.LA(1);

                        if ( (LA7_0==COMA) ) {
                            alt7=1;
                        }


                        switch (alt7) {
                    	case 1 :
                    	    // compiler/parser/GramaticaParser.g:45:52: COMA type id
                    	    {
                    	    match(input,COMA,FOLLOW_COMA_in_method_decl129); 

                    	    pushFollow(FOLLOW_type_in_method_decl131);
                    	    type();

                    	    state._fsp--;


                    	    pushFollow(FOLLOW_id_in_method_decl133);
                    	    id();

                    	    state._fsp--;


                    	    }
                    	    break;

                    	default :
                    	    break loop7;
                        }
                    } while (true);


                    }
                    break;

            }


            match(input,RPAREN,FOLLOW_RPAREN_in_method_decl140); 

            pushFollow(FOLLOW_block_in_method_decl142);
            block();

            state._fsp--;


            addtoList("Method Declaration");

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "method_decl"



    // $ANTLR start "block"
    // compiler/parser/GramaticaParser.g:47:1: block : LBRACE ( var_decl )* ( statement )* RBRACE ;
    public final void block() throws RecognitionException {
        try {
            // compiler/parser/GramaticaParser.g:47:9: ( LBRACE ( var_decl )* ( statement )* RBRACE )
            // compiler/parser/GramaticaParser.g:47:11: LBRACE ( var_decl )* ( statement )* RBRACE
            {
            match(input,LBRACE,FOLLOW_LBRACE_in_block153); 

            // compiler/parser/GramaticaParser.g:47:18: ( var_decl )*
            loop9:
            do {
                int alt9=2;
                int LA9_0 = input.LA(1);

                if ( (LA9_0==BOOLEAN||LA9_0==INT) ) {
                    alt9=1;
                }


                switch (alt9) {
            	case 1 :
            	    // compiler/parser/GramaticaParser.g:47:18: var_decl
            	    {
            	    pushFollow(FOLLOW_var_decl_in_block155);
            	    var_decl();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop9;
                }
            } while (true);


            // compiler/parser/GramaticaParser.g:47:28: ( statement )*
            loop10:
            do {
                int alt10=2;
                int LA10_0 = input.LA(1);

                if ( ((LA10_0 >= BREAK && LA10_0 <= CALLOUT)||LA10_0==CONTINUE||LA10_0==FOR||(LA10_0 >= IF && LA10_0 <= INDENTIFIER)||LA10_0==LBRACE||LA10_0==RETURN) ) {
                    alt10=1;
                }


                switch (alt10) {
            	case 1 :
            	    // compiler/parser/GramaticaParser.g:47:28: statement
            	    {
            	    pushFollow(FOLLOW_statement_in_block158);
            	    statement();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop10;
                }
            } while (true);


            match(input,RBRACE,FOLLOW_RBRACE_in_block161); 

            addtoList("Block");

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "block"



    // $ANTLR start "var_decl"
    // compiler/parser/GramaticaParser.g:49:1: var_decl : type id ( COMA id )* SEMICO ;
    public final void var_decl() throws RecognitionException {
        try {
            // compiler/parser/GramaticaParser.g:49:11: ( type id ( COMA id )* SEMICO )
            // compiler/parser/GramaticaParser.g:49:13: type id ( COMA id )* SEMICO
            {
            pushFollow(FOLLOW_type_in_var_decl171);
            type();

            state._fsp--;


            pushFollow(FOLLOW_id_in_var_decl173);
            id();

            state._fsp--;


            // compiler/parser/GramaticaParser.g:49:21: ( COMA id )*
            loop11:
            do {
                int alt11=2;
                int LA11_0 = input.LA(1);

                if ( (LA11_0==COMA) ) {
                    alt11=1;
                }


                switch (alt11) {
            	case 1 :
            	    // compiler/parser/GramaticaParser.g:49:22: COMA id
            	    {
            	    match(input,COMA,FOLLOW_COMA_in_var_decl176); 

            	    pushFollow(FOLLOW_id_in_var_decl178);
            	    id();

            	    state._fsp--;


            	    }
            	    break;

            	default :
            	    break loop11;
                }
            } while (true);


            match(input,SEMICO,FOLLOW_SEMICO_in_var_decl182); 

            addtoList("Variable Declaration");

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "var_decl"



    // $ANTLR start "type"
    // compiler/parser/GramaticaParser.g:51:1: type : ( INT | BOOLEAN );
    public final void type() throws RecognitionException {
        try {
            // compiler/parser/GramaticaParser.g:51:9: ( INT | BOOLEAN )
            int alt12=2;
            int LA12_0 = input.LA(1);

            if ( (LA12_0==INT) ) {
                alt12=1;
            }
            else if ( (LA12_0==BOOLEAN) ) {
                alt12=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 12, 0, input);

                throw nvae;

            }
            switch (alt12) {
                case 1 :
                    // compiler/parser/GramaticaParser.g:51:11: INT
                    {
                    match(input,INT,FOLLOW_INT_in_type194); 

                    }
                    break;
                case 2 :
                    // compiler/parser/GramaticaParser.g:51:17: BOOLEAN
                    {
                    match(input,BOOLEAN,FOLLOW_BOOLEAN_in_type198); 

                    addtoList("Type");

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "type"



    // $ANTLR start "statement"
    // compiler/parser/GramaticaParser.g:53:1: statement : ( location assign_op expr SEMICO | method_call SEMICO | IF LPAREN expr RPAREN block ( ELSE block )? | FOR id ASSIGN expr COMA expr block | RETURN ( expr )? SEMICO | BREAK SEMICO | CONTINUE SEMICO | block );
    public final void statement() throws RecognitionException {
        try {
            // compiler/parser/GramaticaParser.g:53:12: ( location assign_op expr SEMICO | method_call SEMICO | IF LPAREN expr RPAREN block ( ELSE block )? | FOR id ASSIGN expr COMA expr block | RETURN ( expr )? SEMICO | BREAK SEMICO | CONTINUE SEMICO | block )
            int alt15=8;
            switch ( input.LA(1) ) {
            case INDENTIFIER:
                {
                int LA15_1 = input.LA(2);

                if ( ((LA15_1 >= ASSIGN && LA15_1 <= ASSIGNSUB)||LA15_1==LBRAKE) ) {
                    alt15=1;
                }
                else if ( (LA15_1==LPAREN) ) {
                    alt15=2;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 15, 1, input);

                    throw nvae;

                }
                }
                break;
            case CALLOUT:
                {
                alt15=2;
                }
                break;
            case IF:
                {
                alt15=3;
                }
                break;
            case FOR:
                {
                alt15=4;
                }
                break;
            case RETURN:
                {
                alt15=5;
                }
                break;
            case BREAK:
                {
                alt15=6;
                }
                break;
            case CONTINUE:
                {
                alt15=7;
                }
                break;
            case LBRACE:
                {
                alt15=8;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 15, 0, input);

                throw nvae;

            }

            switch (alt15) {
                case 1 :
                    // compiler/parser/GramaticaParser.g:53:14: location assign_op expr SEMICO
                    {
                    pushFollow(FOLLOW_location_in_statement209);
                    location();

                    state._fsp--;


                    pushFollow(FOLLOW_assign_op_in_statement211);
                    assign_op();

                    state._fsp--;


                    pushFollow(FOLLOW_expr_in_statement213);
                    expr();

                    state._fsp--;


                    match(input,SEMICO,FOLLOW_SEMICO_in_statement215); 

                    }
                    break;
                case 2 :
                    // compiler/parser/GramaticaParser.g:54:7: method_call SEMICO
                    {
                    pushFollow(FOLLOW_method_call_in_statement223);
                    method_call();

                    state._fsp--;


                    match(input,SEMICO,FOLLOW_SEMICO_in_statement225); 

                    }
                    break;
                case 3 :
                    // compiler/parser/GramaticaParser.g:55:7: IF LPAREN expr RPAREN block ( ELSE block )?
                    {
                    match(input,IF,FOLLOW_IF_in_statement233); 

                    match(input,LPAREN,FOLLOW_LPAREN_in_statement235); 

                    pushFollow(FOLLOW_expr_in_statement237);
                    expr();

                    state._fsp--;


                    match(input,RPAREN,FOLLOW_RPAREN_in_statement239); 

                    pushFollow(FOLLOW_block_in_statement241);
                    block();

                    state._fsp--;


                    // compiler/parser/GramaticaParser.g:55:35: ( ELSE block )?
                    int alt13=2;
                    int LA13_0 = input.LA(1);

                    if ( (LA13_0==ELSE) ) {
                        alt13=1;
                    }
                    switch (alt13) {
                        case 1 :
                            // compiler/parser/GramaticaParser.g:55:36: ELSE block
                            {
                            match(input,ELSE,FOLLOW_ELSE_in_statement244); 

                            pushFollow(FOLLOW_block_in_statement246);
                            block();

                            state._fsp--;


                            }
                            break;

                    }


                    }
                    break;
                case 4 :
                    // compiler/parser/GramaticaParser.g:56:7: FOR id ASSIGN expr COMA expr block
                    {
                    match(input,FOR,FOLLOW_FOR_in_statement256); 

                    pushFollow(FOLLOW_id_in_statement258);
                    id();

                    state._fsp--;


                    match(input,ASSIGN,FOLLOW_ASSIGN_in_statement260); 

                    pushFollow(FOLLOW_expr_in_statement262);
                    expr();

                    state._fsp--;


                    match(input,COMA,FOLLOW_COMA_in_statement264); 

                    pushFollow(FOLLOW_expr_in_statement266);
                    expr();

                    state._fsp--;


                    pushFollow(FOLLOW_block_in_statement268);
                    block();

                    state._fsp--;


                    }
                    break;
                case 5 :
                    // compiler/parser/GramaticaParser.g:57:7: RETURN ( expr )? SEMICO
                    {
                    match(input,RETURN,FOLLOW_RETURN_in_statement276); 

                    // compiler/parser/GramaticaParser.g:57:14: ( expr )?
                    int alt14=2;
                    int LA14_0 = input.LA(1);

                    if ( (LA14_0==CALLOUT||LA14_0==CHR||LA14_0==DIGIT||LA14_0==FALSE||LA14_0==HEX||LA14_0==INDENTIFIER||LA14_0==LPAREN||LA14_0==MINUS||LA14_0==NOT||LA14_0==TRUE) ) {
                        alt14=1;
                    }
                    switch (alt14) {
                        case 1 :
                            // compiler/parser/GramaticaParser.g:57:15: expr
                            {
                            pushFollow(FOLLOW_expr_in_statement279);
                            expr();

                            state._fsp--;


                            }
                            break;

                    }


                    match(input,SEMICO,FOLLOW_SEMICO_in_statement283); 

                    }
                    break;
                case 6 :
                    // compiler/parser/GramaticaParser.g:58:7: BREAK SEMICO
                    {
                    match(input,BREAK,FOLLOW_BREAK_in_statement291); 

                    match(input,SEMICO,FOLLOW_SEMICO_in_statement293); 

                    }
                    break;
                case 7 :
                    // compiler/parser/GramaticaParser.g:59:7: CONTINUE SEMICO
                    {
                    match(input,CONTINUE,FOLLOW_CONTINUE_in_statement301); 

                    match(input,SEMICO,FOLLOW_SEMICO_in_statement303); 

                    }
                    break;
                case 8 :
                    // compiler/parser/GramaticaParser.g:60:7: block
                    {
                    pushFollow(FOLLOW_block_in_statement311);
                    block();

                    state._fsp--;


                    addtoList("Statement");

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "statement"



    // $ANTLR start "assign_op"
    // compiler/parser/GramaticaParser.g:62:1: assign_op : ( ASSIGN | ASSIGNADD | ASSIGNSUB );
    public final void assign_op() throws RecognitionException {
        try {
            // compiler/parser/GramaticaParser.g:62:12: ( ASSIGN | ASSIGNADD | ASSIGNSUB )
            int alt16=3;
            switch ( input.LA(1) ) {
            case ASSIGN:
                {
                alt16=1;
                }
                break;
            case ASSIGNADD:
                {
                alt16=2;
                }
                break;
            case ASSIGNSUB:
                {
                alt16=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 16, 0, input);

                throw nvae;

            }

            switch (alt16) {
                case 1 :
                    // compiler/parser/GramaticaParser.g:62:14: ASSIGN
                    {
                    match(input,ASSIGN,FOLLOW_ASSIGN_in_assign_op322); 

                    }
                    break;
                case 2 :
                    // compiler/parser/GramaticaParser.g:63:7: ASSIGNADD
                    {
                    match(input,ASSIGNADD,FOLLOW_ASSIGNADD_in_assign_op331); 

                    }
                    break;
                case 3 :
                    // compiler/parser/GramaticaParser.g:64:7: ASSIGNSUB
                    {
                    match(input,ASSIGNSUB,FOLLOW_ASSIGNSUB_in_assign_op339); 

                    addtoList("Assign Operator");

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }

        finally {
        	// do for sure before leaving
        }
        return ;
    }
    // $ANTLR end "assign_op"



    // $ANTLR start "method_call"
    // compiler/parser/GramaticaParser.g:66:1: method_call : ( method_name LPAREN ( expr ( COMA expr )* )? RPAREN | CALLOUT LPAREN string_literal ( ( COMA callout_arg )+ )? RPAREN );
    public final void method_call() throws RecognitionException {
        try {
            // compiler/parser/GramaticaParser.g:66:14: ( method_name LPAREN ( expr ( COMA expr )* )? RPAREN | CALLOUT LPAREN string_literal ( ( COMA callout_arg )+ )? RPAREN )
            int alt21=2;
            int LA21_0 = input.LA(1);

            if ( (LA21_0==INDENTIFIER) ) {
                alt21=1;
            }
            else if ( (LA21_0==CALLOUT) ) {
                alt21=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 21, 0, input);

                throw nvae;

            }
            switch (alt21) {
                case 1 :
                    // compiler/parser/GramaticaParser.g:66:16: method_name LPAREN ( expr ( COMA expr )* )? RPAREN
                    {
                    pushFollow(FOLLOW_method_name_in_method_call350);
                    method_name();

                    state._fsp--;


                    match(input,LPAREN,FOLLOW_LPAREN_in_method_call352); 

                    // compiler/parser/GramaticaParser.g:66:35: ( expr ( COMA expr )* )?
                    int alt18=2;
                    int LA18_0 = input.LA(1);
